force-app/main/default/objects/Calendly_Event_Type__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Name__c</fullName>
        <label>Calendar Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <label>Event URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Person_ID_Answer_Key__c</fullName>
        <label>Person ID Answer Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Calendly Event Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Calendar_Name__c</columns>
        <columns>Event_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendly Event Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>